kubernetes/storage/longhorn/longhorn/app/gateway.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
annotations:
  gethomepage.dev/enabled: "true"
  gethomepage.dev/name: longhorn
  gethomepage.dev/description: ICsI-backed storage for Kubernetes
  gethomepage.dev/group: Storage
  gethomepage.dev/icon: longhorn.png
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - longhorn.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
